# firma2

./: Cargo.toml  README.md  deleteme  flake.nix  prompt-init.md
build-raspi4-image/: README.md  flake.nix
cli/: Cargo.toml
lib/: Cargo.toml
lib/_tests/: integration.rs
lib/src/: addresses.rs  deriva.rs  derive.rs  error.rs  firma.rs  import.rs  lib.rs  seed.rs  sign.rs  spendable.rs
lib/tests/: integration.rs
vm/: flake.nix  prompt-init.md
wallet/: AGE_PASSPHRASE  CODEX32  CODEX_32  CODEX_32.age  MNEMONIC.age  bip86_derivation_path  bip86_derivation_path_testnet  descriptor  descriptor_mainnet  descriptor_mainnet_external  descriptor_mainnet_internal  descriptor_mainnet_internal_checksum  descriptor_testnet  descriptor_testnet_external  descriptor_testnet_internal  descriptor_testnet_internal_checksum  first_address_mainnet  first_address_regtest  first_address_testnet  master_fingerprint  master_tpub  master_xpub  psbt  psbt_newline  psbt_signed
