[package]
name = "firma2-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.32.4", features = ["base64", "serde"] }
miniscript = "12.2.0"
clap = { version = "4.5.20", features = ["derive", "env"] }
bip39 = "2.1.0"
codex32 = "0.1.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"

[dev-dependencies]
bitcoind = "0.36.0"
tempfile = "3.13.0"
